WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
308402
REGRESSION (
306807@main
): Unrecognized selector -scrollViewDidScroll: under -[WKScrollViewDelegateForwarder forwardInvocation:]
https://bugs.webkit.org/show_bug.cgi?id=308402
Summary
REGRESSION (306807@main): Unrecognized selector -scrollViewDidScroll: under -...
Wenson Hsieh
Reported
2026-02-21 14:30:32 PST
rdar://170105626
Attachments
Add attachment
proposed patch, testcase, etc.
Wenson Hsieh
Comment 1
2026-02-21 15:26:04 PST
Pull request:
https://github.com/WebKit/WebKit/pull/59178
EWS
Comment 2
2026-02-21 19:12:34 PST
Committed
307999@main
(6ede33e742f2): <
https://commits.webkit.org/307999@main
> Reviewed commits have been landed. Closing PR #59178 and removing active labels.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug